--- a/File Templates/Cocoa Class with Protocol.xctemplate/TemplateInfo.plist
+++ b/File Templates/Cocoa Class with Protocol.xctemplate/TemplateInfo.plist
@@ -21,7 +21,7 @@
 	<array>
 		<dict>
 			<key>Identifier</key>
-			<string>productName</string>
+			<string>protocolName</string>
 			<key>Required</key>
 			<true/>
 			<key>Name</key>
@@ -83,7 +83,7 @@
 		</dict>
 		<dict>
 			<key>Identifier</key>
-			<string>implementationPrefix</string>
+			<string>IMPLPREFIX</string>
 			<key>Required</key>
 			<true/>
 			<key>Name</key>
