--- a/File Templates/TCCollectionCellObject.xctemplate/TemplateInfo.plist
+++ b/File Templates/TCCollectionCellObject.xctemplate/TemplateInfo.plist
@@ -16,5 +16,30 @@
 	<array>
 		<string>com.apple.platform.iphoneos</string>
 	</array>
+	<key>Options</key>
+	<array>
+		<dict>
+			<key>Default</key>
+			<string></string>
+			<key>Description</key>
+			<string>The name of the cell class</string>
+			<key>Identifier</key>
+			<string>cellClass</string>
+			<key>Name</key>
+			<string>Cell name:</string>
+			<key>Required</key>
+			<string>YES</string>
+			<key>Type</key>
+			<string>text</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>___VARIABLE_cellClass___</string>
+			<key>Identifier</key>
+			<string>productName</string>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+	</array>
 </dict>
 </plist>
